<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Rejestracja"
        android:textSize="30sp"
        android:layout_margin="20dp"
        android:gravity="center"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rej_name"
                android:inputType="textPersonName"
                android:id="@+id/id_rej_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rej_surname"
                android:inputType="textPersonName"
                android:id="@+id/id_rej_surname" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rej_email"
                android:inputType="textPersonName"
                android:id="@+id/id_rej_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rej_age"
                android:inputType="number"
                android:id="@+id/editText6" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rej_password"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText4" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rej_again_password"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText5" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rej_register"
                android:textSize="20dp"
                android:layout_margin="20dp"
                android:onClick="clickRegister"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
